# depth-aware-motion-deblurring

./: .gitignore  CMakeLists.txt  README.md  Timeline.md  study-thesis.sublime-project
docs/: .gitignore  README.md  clear.sh  compile.sh  docutils.conf  references.bib  rst2pdf.py  study-thesis.rst  template.tex  theory.rst  utils.rst  watch
docs/chapters/: bibliography.rst  blur-basics.rst  conclusion.rst  depth-aware-deblurring.rst  evaluation.rst  introduction.rst  related-work.rst
docs/task/: assignment-of-tasks.tex
images/toplevel-kernel/: .gitignore  README.md
include/: depth_aware_deblurring.hpp  disparity_estimation.hpp  region_tree.hpp  two_phase_psf_estimation.hpp
iterative-support-detection/: CMakeLists.txt  isd.cpp  isd.hpp  main.cpp
motion-deblurring/: CMakeLists.txt  README.md
motion-deblurring/include/: deconvolution.hpp  depth_aware_deblurring.hpp  depth_deblur.hpp  disparity_estimation.hpp  edge_map.hpp  iterative_psf.hpp  region_tree.hpp
motion-deblurring/src/: deconvolution.cpp  depth_aware_deblurring.cpp  depth_deblur.cpp  disparity.cpp  disparity_estimation.cpp  edge_map.cpp  iterative_psf.cpp  main.cpp  region_tree.cpp
src/: CMakeLists.txt  README.md  depth_aware_deblurring.cpp  disparity_estimation.cpp  main.cpp  region_tree.cpp  two_phase_psf_estimation.cpp
synthetic-images/: .gitignore  CMakeLists.txt  convolve.cpp
tools/: .gitignore  CMakeLists.txt  README.md  convolve.cpp  deconvolve.cpp  disparity_estimation.cpp  psf_selection.cpp  shock_filter.cpp  top_level_deconv.cpp
two-phase-kernel/: CMakeLists.txt  README.md
two-phase-kernel/include/: two_phase_psf_estimation.hpp
two-phase-kernel/src/: coherence_filter.hpp  kernel_initialization.cpp  kernel_initialization.hpp  main.cpp  two_phase_psf_estimation.cpp  utils.hpp
utils/: CMakeLists.txt  coherence_filter.cpp  coherence_filter.hpp  deconvolution.cpp  deconvolution.hpp  utils.cpp  utils.hpp
